RESOLVED FIXED216780
currentColor isn't recalculated when a text node doesn't exist
https://bugs.webkit.org/show_bug.cgi?id=216780
Summary currentColor isn't recalculated when a text node doesn't exist
Cory LaViska
Reported 2020-09-21 08:24:00 PDT
When an element doesn't contain a text node and currentColor is used for background-color, outline, and possibly other properties, the value isn't recalculated when the color changes. This fiddle demonstrates the bug in a few lines of code. https://jsfiddle.net/6tkyor3x/
Attachments
patch (6.10 KB, patch)
2020-09-24 03:38 PDT, Antti Koivisto
no flags
patch (6.22 KB, patch)
2020-09-24 04:52 PDT, Antti Koivisto
no flags
patch (6.22 KB, patch)
2020-09-24 04:54 PDT, Antti Koivisto
ews-feeder: commit-queue-
Cory LaViska
Comment 1 2020-09-21 08:24:42 PDT
This affects Safari version 14.0 (15610.1.28.1.9, 15610).
Timothy Hatcher
Comment 2 2020-09-21 08:38:10 PDT
*** Bug 216782 has been marked as a duplicate of this bug. ***
Radar WebKit Bug Importer
Comment 3 2020-09-21 12:45:31 PDT
Antti Koivisto
Comment 4 2020-09-24 02:25:26 PDT
Style is computed correctly but we fail to repaint.
Antti Koivisto
Comment 5 2020-09-24 03:38:55 PDT
Antti Koivisto
Comment 6 2020-09-24 04:52:13 PDT
Antti Koivisto
Comment 7 2020-09-24 04:54:33 PDT
EWS
Comment 8 2020-09-24 06:21:17 PDT
Committed r267528: <https://trac.webkit.org/changeset/267528> All reviewed patches have been landed. Closing bug and clearing flags on attachment 409558 [details].
Note You need to log in before you can comment on or make changes to this bug.