currentColor isn't recalculated when a text node doesn't exist https://bugs.webkit.org/show_bug.cgi?id=216780 <rdar://problem/69320933>

Reviewed by Antoine Quint.

Source/WebCore:

We fail to repaint with the new background color when 'background-color' property has value 'currentColor' and the current color changes.

Test case by Cory LaViska.

Test: fast/css/currentColor-background-paint.html

* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::changeRequiresRepaint const):
* rendering/style/StyleBackgroundData.cpp:
(WebCore::StyleBackgroundData::isEquivalentForPainting const):
* rendering/style/StyleBackgroundData.h:

LayoutTests:

* fast/css/currentColor-background-paint-expected.html: Added.
* fast/css/currentColor-background-paint.html: Added.


Canonical link: https://commits.webkit.org/229710@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267528 268f45cc-cd09-0410-ab3c-d52691b4dbfc