Source/WebCore/rendering/style/StyleBackgroundData.cpp
@@ -51,12 +51,16 @@ bool StyleBackgroundData::operator==(const StyleBackgroundData& other) const
     return background == other.background && color == other.color && outline == other.outline;
 }
 
-bool StyleBackgroundData::isEquivalentForPainting(const StyleBackgroundData& other) const
+bool StyleBackgroundData::isEquivalentForPainting(const StyleBackgroundData& other, bool currentColorDiffers) const
 {
     if (background != other.background || color != other.color)
         return false;
+    if (currentColorDiffers && color == RenderStyle::currentColor())
+        return false;
     if (!outline.isVisible() && !other.outline.isVisible())
         return true;
+    if (currentColorDiffers && outline.color() == RenderStyle::currentColor())
+        return false;
     return outline == other.outline;
 }
 
