Source/WebCore/rendering/style/StyleBackgroundData.h
@@ -41,7 +41,7 @@ public:
     bool operator==(const StyleBackgroundData&) const;
     bool operator!=(const StyleBackgroundData& other) const { return !(*this == other); }
 
-    bool isEquivalentForPainting(const StyleBackgroundData&) const;
+    bool isEquivalentForPainting(const StyleBackgroundData&, bool currentColorDiffers) const;
 
     DataRef<FillLayer> background;
     Color color;
